--- a/index.html
+++ b/index.html
@@ -31,13 +31,84 @@
     <div class="container">
       <!-- 8:00 AM-->
       <div id = "8" class = "row time-block">
-        <div class = "hour">
-          <p>8:00 AM</p>
+        <div class = "hour col-md-1">
+          8:00 AM
         </div>
-        <textarea class = "description">Enter Event</textarea>
-        <button class = "saveBtn">Save</button>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
       </div>
       <!-- 9:00 AM-->
+      <div id = "9" class = "row time-block">
+        <div class = "hour col-md-1">
+          9:00 AM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 10:00 AM-->
+      <div id = "10" class = "row time-block">
+        <div class = "hour col-md-1">
+          10:00 AM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 11:00 AM-->
+      <div id = "11" class = "row time-block">
+        <div class = "hour col-md-1">
+          11:00 AM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 12:00 PM-->
+      <div id = "12" class = "row time-block">
+        <div class = "hour col-md-1">
+          12:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 1:00 PM-->
+      <div id = "13" class = "row time-block">
+        <div class = "hour col-md-1">
+          1:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 2:00 PM-->
+      <div id = "14" class = "row time-block">
+        <div class = "hour col-md-1">
+          2:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 3:00 PM-->
+      <div id = "15" class = "row time-block">
+        <div class = "hour col-md-1">
+          3:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 4:00 PM-->
+      <div id = "16" class = "row time-block">
+        <div class = "hour col-md-1">
+          4:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
+      <!-- 5:00 PM-->
+      <div id = "17" class = "row time-block">
+        <div class = "hour col-md-1">
+          5:00 PM
+        </div>
+        <textarea class = "description col-md-10"></textarea>
+        <button class = "saveBtn col-md-1"><i class="fas fa-piggy-bank"></i></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
